Fix gap in footer

--- a/src/app.css
+++ b/src/app.css
@@ -158,7 +158,6 @@ footer {
   position: static;
   display: flex;
   align-items: center;
-  gap: 0.75rem;
   justify-content: center;
 }
 
